Create Park table and test worker

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,6 +10,11 @@ compatibility_flags = ["nodejs_compat"]
 [observability]
 enabled = true
 
+[[d1_databases]]
+binding = "DB"
+database_name = "roller-coaster-tracker"
+database_id = "1defebf7-c8cf-4ad4-b1e7-6c44114556be"
+
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
 # rather than the end user may result in better performance.
