--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/adapter-d1": "^5.22.0",
     "@prisma/client": "^5.22.0",
-    "hono": "^4.6.10"
+    "hono": "^4.6.10",
+    "zod": "^3.23.8"
   }
 }
